--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3189,6 +3189,12 @@ z-index: -10px;
   margin-bottom:90px;z-index: 1;
 }
 
+
+
+.TeamsOption{
+top: 100px;right: 0;left: 400px;
+}
+
 @media (max-width:992px){
   .show-btn,.hide-btn{
      display: block; 
@@ -3387,11 +3393,27 @@ z-index: -10px;
       right: 0;
       top: 8px;
     }
+    .clients{
+      padding-top: 20px;
+      padding-bottom: 20px;
+    }
+    .nomediaquery{
+      display: none;
+    }
+    .mediaquery{
+      display: block;
+    }
+}
+@media (min-width:992px){
+  .mediaquery{
+    display: none;
+  }
+}
 
-}
-.TeamsOption{
-top: 100px;right: 0;left: 400px;
-}
+
+
+
+
 
 
 
