--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3408,6 +3408,7 @@ top: 100px;right: 0;left: 400px;
     }
     .AboutUsContent{
       font-size: 50px;
+      margin-bottom: 0;
     }
 }
 @media (min-width:1000px){
