--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3417,6 +3417,9 @@ top: 100px;right: 0;left: 400px;
       font-size: 50px;
       margin-bottom: 0;
     }
+    .tabsContent{
+      font-size: 20px;
+    }
 }
 @media (min-width:1000px){
   .mediaquery{
