--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3417,7 +3417,7 @@ top: 100px;right: 0;left: 400px;
       font-size: 50px;
       margin-bottom: 0;
     }
-    .tabsContent{
+    .tabs .nav-link h4{
       font-size: 10px;
     }
 }
