--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -260,6 +260,9 @@ color:black;
   }
 }
 
+
+
+
 /**
 * Mobile Navigation 
 */
@@ -355,6 +358,16 @@ color:black;
 /*--------------------------------------------------------------
 # Hero Section
 --------------------------------------------------------------*/
+
+.hero-title{
+  font-size: 80px;
+}
+
+.hero-e{
+  color: #e86105;
+  display: inline;
+}
+
 #hero {
   width: 100%;
   height: 100vh;
