--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -439,16 +439,48 @@ color:black;
   color:#fff;
   background: transparent;
 }
-@media (max-width: 768px) {
+
+@media (max-width: 992px) {
   #hero .carousel-content{
     text-align: center;
     top: 25%;
-    left: 9%;
+    left: 7%;
    
   }
 
   .hero-title{
-    font-size: 38px; 
+    font-size: 35px; 
+   }
+ 
+   #hero .carousel-content p{
+     font-size: 14px;
+   }
+ 
+   .hero-gla{
+     font-size: 23px;
+   }
+ 
+
+  #hero {
+    text-align: center;
+    padding-top: 58px;
+  }
+  /* #hero h1 {
+    font-size: 28px;
+  } */
+  
+}
+
+@media (max-width: 768px) {
+  #hero .carousel-content{
+    text-align: center;
+    top: 25%;
+    left: 7%;
+   
+  }
+
+  .hero-title{
+    font-size: 30px; 
    }
  
    #hero .carousel-content p{
