--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ color:black;
 
 @media (max-width: 768px) {
 
-  .cards{
+  /*.cards{
     position: relative;
     left: 60%;
     right: 10%;
@@ -484,7 +484,7 @@ color:black;
       width: 130px;
       background-image:url('https://tanyaagarwal28.github.io/Images/StudentCouncilDark-01.png');
       background-size: 130px 170px;
-    }
+    }*/
 
 
 
