--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3353,9 +3353,8 @@ top: 100px;right: 0;left: 400px;
     display: none;
   }
   .cards{
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+    position: relative;
+    left: 72%;
   }
 
     .my-card {
