--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -443,9 +443,9 @@ color:black;
 @media (max-width: 992px) {
   #hero .carousel-content{
     text-align: center;
-    top: 0%;
+    /*top: 0%;
     left: 9%;
-    bottom: 100%;
+    bottom: 100%;*/
    
   }
 
