--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,8 +496,8 @@ color:black;
 
   #hero .carousel-content{
     text-align: center;
-    top: 25%;
-    left: 7%;
+    /*top: 25%;
+    left: 7%;*/
    
   }
 
