--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -496,8 +496,9 @@ color:black;
 
   #hero .carousel-content{
     text-align: center;
-    top: 20%;
+    top: 17%;
     left: 9%;
+    bottom: 50%;
    
   }
 
