--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -500,8 +500,8 @@ color:black;
 
 
  #hero .carousel-content{
-    position: relative;
     text-align: center;
+    position:absolute;
     top: 50%;
     left: 9%;
     bottom: 48%;
